# TeleGramSight

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-form.yml
.github/workflows/: mypy.yml  release.yml
telegramsight/: conf_sample.py  main.py
