[project]
name = "TeleGramSight"
version = "0.1.0"
description = "Retrieve vulnerability sightings collected from Telegram and push them to a Vulnerability-Lookup instance."
authors = [
    {name = "Cédric Bonhomme", email = "cedric@cedricbonhomme.org"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyvulnerabilitylookup (>=2.0.0,<3.0.0)",
    "requests (>=2.31,<3.0)",
    "cryptography (>=42.0,<46.0)",
]

[project.scripts]
telegramsight = "telegramsight.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
